--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,32 +21,32 @@
   {% if site.author.twitter_username %}
   <meta name="twitter:creator" content="{{ site.author.twitter_username }}">
   {% endif %}
-  <meta name="twitter:image" content="{{ site.baseurl }}/images/favicons/Neurips.jpg" />
+  <meta name="twitter:image" content="{{ site.baseurl }}/images/favicons/aaai.png" />
 
   <meta property="og:type" content="article">
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
   <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html }}{% else %}{{ site.description }}{% endif %}">
-  <meta property="og:image" content="{{ site.baseurl }}/images/favicons/Neurips.jpg" />
+  <meta property="og:image" content="{{ site.baseurl }}/images/favicons/aaai.png" />
 
-  <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
-  <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
-  <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
-  <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
-  <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
-  <link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
-  <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
-  <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
-  <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/Neurips.jpg" sizes="32x32">
-  <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/Neurips.jpg" sizes="194x194">
-  <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/Neurips.jpg" sizes="96x96">
-  <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/Neurips.jpg" sizes="192x192">
-  <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/Neurips.jpg" sizes="16x16">
+  <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/images/favicons/aaai.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/images/favicons/aaai.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/images/favicons/aaai.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl }}/images/favicons/aaai.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/images/favicons/aaai.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/images/favicons/aaai.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/images/favicons/aaai.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/images/favicons/aaai.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/images/favicons/aaai.png">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/aaai.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/aaai.png" sizes="194x194">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/aaai.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/aaai.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/aaai.png" sizes="16x16">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="manifest" href="{{ site.baseurl }}/images/favicons/manifest.json">
-  <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/aaai.png">
   <meta name="msapplication-TileColor" content="#ffc40d">
-  <meta name="msapplication-TileImage" content="{{ site.baseurl }}/images/favicons/Neurips.jpg">
+  <meta name="msapplication-TileImage" content="{{ site.baseurl }}/images/favicons/aaai.png">
   <meta name="theme-color" content="#ffffff">
   
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css?{{site.time | date: '%s%N'}}">
