--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,10 +3,11 @@ layout: default
 ---
 <article class="post-container post-container--single">
 
+  {% unless page.hide_title %}
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-
   </header>
+  {% endunless %}
 
   <section class="post">
     {{ content }}
